log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:31:58 PM UTC 2026: 
 graph.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     MapPair *par = map_search(g->adjacencyMap, label1);
      |                                                ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:53:31: error: expected ‘;’ before ‘Edge’
   53 |     if (par == NULL) return -1
      |                               ^
      |                               ;
   54 | 
   55 |     Edge *aux = list_first(par->value);
      |     ~~~~                       
graph.c:56:11: error: ‘aux’ undeclared (first use in this function)
   56 |     while(aux != NULL) {
      |           ^~~
graph.c:56:11: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
dc637bc
Thu May 14 08:35:49 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     MapPair *par = map_search(g->adjacencyMap, label1);
      |                                                ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
3f3e5e4
Thu May 14 08:36:11 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
cb4c55e
Sun May 17 02:30:17 AM UTC 2026: 
 tests:  1|5
========================================
db1c115
Sun May 17 02:32:08 AM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
577ad3f
Sun May 17 06:40:21 AM UTC 2026: 
 graph.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:8: error: ‘Graph’ has no member named ‘adjaencyMap’; did you mean ‘adjacencyMap’?
   34 |     g->adjaencyMap = createMap(is_equal_string);
      |        ^~~~~~~~~~~
      |        adjacencyMap
graph.c:34:22: error: implicit declaration of function ‘createMap’; did you mean ‘createGraph’? [-Wimplicit-function-declaration]
   34 |     g->adjaencyMap = createMap(is_equal_string);
      |                      ^~~~~~~~~
      |                      createGraph
d59b524
Sun May 17 06:40:48 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:8: error: ‘Graph’ has no member named ‘adjaencyMap’; did you mean ‘adjacencyMap’?
   34 |     g->adjaencyMap = map_create(is_equal_string);
      |        ^~~~~~~~~~~
      |        adjacencyMap
248b29c
Sun May 17 06:40:57 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c8ea0c1
Sun May 17 06:42:32 AM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
fde92b8
Sun May 17 06:45:46 AM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
746628d
Sun May 17 06:58:37 AM UTC 2026: 
 graph.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:45:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   45 |     MapPair *par = map_search(g->adjacencyMap, label);
      |                                                ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:50:47: error: expected expression before ‘void’
   50 |         map_insert(g->adjacencyMap, newLabel, void *ls);
      |                                               ^~~~
graph.c:49:15: error: unused variable ‘ls’ [-Werror=unused-variable]
   49 |         List* ls = list_create();
      |               ^~
cc1: all warnings being treated as errors
fbb874a
Sun May 17 06:58:56 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:45:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   45 |     MapPair *par = map_search(g->adjacencyMap, label);
      |                                                ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
b3451ab
Sun May 17 07:00:19 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ad2dc70
Sun May 17 07:11:26 AM UTC 2026: 
 graph.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  7|2
========================================
275b630
Sun May 17 07:21:40 AM UTC 2026: 
 graph.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|0
4473f45
Sun May 17 07:22:39 AM UTC 2026: 
 graph.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ce11bb0
Sun May 17 07:24:55 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
b1ba6e2
